# lambek

./: Cargo.toml  README.md
.github/workflows/: gh-pages.yaml
examples/: constraint.rs
src/: bi_type_app.rs  constraint.rs  function.rs  functor.rs  hlist.rs  lib.rs  nat.rs  nat_trans.rs  product.rs  reference.rs  refl.rs  row.rs  send.rs  sum.rs  type_app.rs
src/test/: constraint.rs  functor.rs  mod.rs  type_app.rs
src/type_app/: base.rs  compose.rs  dynamic.rs  generic.rs  identity.rs  mod.rs
